--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -79,7 +79,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
                 android:orientation="vertical" >
 
                 <Button
@@ -127,7 +126,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tool_bar"
-                android:layout_marginTop="95dp" >
+                android:layout_marginTop="65dp" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -153,10 +152,12 @@
 
             <LinearLayout
                 android:id="@+id/menu_bar"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/toolbottom_bg"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal" >
 
                 <com.sinopec.view.MenuButton
