--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,14 +17,14 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     <style name="btn_toolbar_btn">
-         <item name="android:layout_width">50dp</item> 
-         <item name="android:layout_height">50dp</item> 
+         <item name="android:layout_width">wrap_content</item> 
+         <item name="android:layout_height">wrap_content</item> 
          <item name="android:gravity">center</item> 
          <item name="android:layout_marginTop">8dp</item> 
          <item name="android:background">@drawable/btn_alpha</item> 
          <item name="android:layout_weight">1</item> 
          <item name="android:textSize">12sp</item> 
-         <item name="android:textColor">@color/black</item> 
+         <item name="android:textColor">@color/white</item> 
     </style>
     <style name="btn_search_confirm">
          <item name="android:layout_width">wrap_content</item> 
