--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -109,4 +109,11 @@
          <item name="android:paddingBottom">5dp</item> 
          <item name="android:textSize">15sp</item> 
     </style>
+    <style name="exit_alert_btn">
+         <item name="android:layout_width">120dp</item> 
+         <item name="android:layout_height">50dp</item> 
+         <item name="android:background">@drawable/selector_exit_btn</item> 
+         <item name="android:textSize">25sp</item> 
+         <item name="android:textColor">@color/black</item> 
+    </style>
 </resources>
