--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/searchbtn"
                         android:hint="搜索地图"
-                        android:textSize="20sp" />
+                        android:textSize="16sp" />
 
                     <com.sinopec.view.MenuButtonNoIcon
                         android:id="@+id/btn_search_confirm"
@@ -119,6 +119,16 @@
                     android:text="@string/btn_cur_screen" />
             </LinearLayout>
 
+            <!-- 取消选择按钮 -->
+                <Button
+                    android:id="@+id/tb_cancel_chooise"
+                    style="@style/btn_toolbar_btn"
+                                android:layout_width="80dp"
+                android:layout_height="80dp"
+                 android:layout_alignParentRight="true"
+                 android:layout_centerVertical="true"
+                 android:textSize="20sp"
+                    android:text="@string/btn_cancel_chooise" />
             <!-- 放大，缩小 -->
 
             <RelativeLayout
@@ -134,14 +144,14 @@
                     android:layout_alignParentRight="true"
                     android:orientation="horizontal" >
 
-                    <ImageView
-                        android:id="@+id/sxBtn"
+                    <ImageButton
+                        android:id="@+id/btn_scale_small"
                         android:layout_width="66dp"
                         android:layout_height="43dp"
                         android:background="@drawable/btn_in" />
 
-                    <ImageView
-                        android:id="@+id/fdBtn"
+                    <ImageButton
+                        android:id="@+id/btn_scale_big"
                         android:layout_width="66dp"
                         android:layout_height="43dp"
                         android:background="@drawable/btn_zoom" />
@@ -200,14 +210,14 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/menu_bar"
-                android:background="@color/white" >
+                android:gravity="center_horizontal" >
                 <GridView
                     android:id="@+id/menu_gridview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:cacheColorHint="#00000000" 
                     android:numColumns="auto_fit" />
-            </RelativeLayout>
+            </RelativeLayout> 
         </RelativeLayout>
     </FrameLayout>
 
