--- a/res/layout/menu_child_item.xml
+++ b/res/layout/menu_child_item.xml
@@ -13,6 +13,7 @@
         iconbutton:relation="icon_above"
         android:focusable="false"
         android:clickable="false"
-        iconbutton:text_size="14sp" />
+        iconbutton:text_size="14sp"
+         />
 
 </LinearLayout>
