--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -101,12 +101,13 @@
          <item name="android:background">@drawable/selector_btn_toolbar</item> 
     </style>
     <style name="login_editext" parent="text_size">
-         <item name="android:layout_width">fill_parent</item> 
+         <item name="android:layout_width">wrap_content</item> 
          <item name="android:layout_height">wrap_content</item> 
          <item name="android:background">@drawable/login_edittext_bg</item> 
          <item name="android:paddingLeft">10dp</item> 
          <item name="android:paddingTop">5dp</item> 
          <item name="android:paddingBottom">5dp</item> 
+         <item name="android:singleLine">true</item> 
          <item name="android:textSize">15sp</item> 
     </style>
     <style name="exit_alert_btn">
