--- a/res/layout/view_menu_popwindow.xml
+++ b/res/layout/view_menu_popwindow.xml
@@ -2,31 +2,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/popup_bg"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/menu_title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/menu_content"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="invisible" >
-
-        <com.sinopec.view.MenuViewTool
-            android:id="@+id/pop_menuview"
-            style="@style/menubar_menuview" />
+        android:layout_gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" >
 
         <ListView
             android:id="@+id/menu_listview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#f7f5f5"
+            android:layout_centerInParent="true"
             android:cacheColorHint="#00000000" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
