--- a/res/layout/view_menu_popwindow.xml
+++ b/res/layout/view_menu_popwindow.xml
@@ -1,25 +1,15 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/popup_bg"
-    android:orientation="vertical" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp" >
 
-
-    <RelativeLayout
-        android:id="@+id/menu_content"
+    <ListView
+        android:id="@+id/menu_listview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" >
+        android:layout_centerInParent="true"
+        android:cacheColorHint="#00000000" />
 
-        <ListView
-            android:id="@+id/menu_listview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:cacheColorHint="#00000000" />
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
