--- a/res/drawable/selector_btn_toolbar.xml
+++ b/res/drawable/selector_btn_toolbar.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_focused="false" android:state_pressed="true"
 		android:drawable="@color/lightyellow" />
+	<item android:state_selected="true" android:drawable="@color/blue_press" />
 	<item android:state_focused="false" android:drawable="@color/white" />
 </selector>
