--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -234,10 +234,10 @@
 
             <RelativeLayout
                 android:id="@+id/menu_children_grid"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/menu_bar"
-                
+                android:layout_centerHorizontal="true"
                 android:gravity="center_horizontal" >
 
                 <GridView
@@ -245,8 +245,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/children_menu_bg"
+                    android:columnWidth="100dp"
                     android:cacheColorHint="#00000000"
-                    android:numColumns="auto_fit" />
+                    android:numColumns="3" />
             </RelativeLayout>
         </RelativeLayout>
     </FrameLayout>
