--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -76,8 +76,8 @@
     </style>
     <!-- 子菜单 -->
     <style name="btn_child_menu">
-         <item name="android:layout_width">wrap_content</item> 
-         <item name="android:layout_height">wrap_content</item> 
+         <item name="android:layout_width">fill_parent</item> 
+         <item name="android:layout_height">fill_parent</item> 
          <item name="android:gravity">center</item> 
          <item name="android:textColor">@color/black</item> 
          <item name="android:background">@drawable/selector_btn_childmenu</item> 
