--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -35,12 +35,12 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/toolbottom_bg"
                     android:gravity="center_vertical"
-                    android:paddingLeft="8dp"
+                    android:padding="8dp"
                     android:orientation="horizontal" >
 
                     <EditText
                         android:id="@+id/edittext_search"
-                        android:layout_width="1200dp"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/searchbtn"
                         android:hint="搜索地图"
@@ -53,7 +53,8 @@
                         android:background="@drawable/selector_btn_toolbar"
                         android:gravity="center"
                         android:text="@string/btn_confirm"
-                        android:textSize="15sp" />
+                        android:textSize="15sp" 
+                        android:visibility="gone"/>
                 </LinearLayout>
 
                 <RelativeLayout
@@ -244,10 +245,10 @@
                     android:id="@+id/menu_gridview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
                     android:background="@drawable/children_menu_bg"
-                    android:columnWidth="100dp"
                     android:cacheColorHint="#00000000"
-                    android:numColumns="3" />
+                    android:numColumns="auto_fit" />
             </RelativeLayout>
         </RelativeLayout>
     </FrameLayout>
