--- a/res/layout/layout_layer.xml
+++ b/res/layout/layout_layer.xml
@@ -2,15 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical" >
+    android:background="@drawable/toolbar_bg"
+    android:orientation="vertical"
+    android:paddingBottom="10dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="10dp" >
 
     <TextView
         style="@style/text_size"
         android:layout_width="600dip"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="图层设置" />
+        android:text="图层设置"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -73,15 +78,16 @@
         android:id="@+id/id_llaout_layer_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dip"
-        android:gravity="center" >
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp" >
 
         <ListView
             android:id="@+id/id_lstview_layer_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:cacheColorHint="#00000000" >
-        </ListView>
+            android:cacheColorHint="#00000000" />
     </LinearLayout>
 
     <RelativeLayout
@@ -90,7 +96,8 @@
         android:layout_marginBottom="5dip"
         android:layout_marginTop="50dip"
         android:paddingLeft="15dp"
-        android:paddingRight="15dp" >
+        android:paddingRight="15dp"
+        android:visibility="gone" >
 
         <Button
             android:id="@+id/id_btn_operator_1"
