--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -73,6 +73,7 @@
          <item name="android:gravity">center</item> 
          <item name="android:textColor">@color/black</item> 
          <item name="android:background">@drawable/selector_btn_toolbar</item> 
+         <item name="android:focusableInTouchMode">true</item> 
     </style>
     <!-- 子菜单 -->
     <style name="btn_child_menu">
