--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         </com.esri.android.map.MapView>
 
         <RelativeLayout
+            android:id="@+id/main_base_layout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:paddingLeft="5dp"
