--- a/res/layout/menu_child_item.xml
+++ b/res/layout/menu_child_item.xml
@@ -11,6 +11,7 @@
         iconbutton:icon="@drawable/zl"
         iconbutton:mtext="@string/btn_count"
         iconbutton:relation="icon_above"
+        android:enabled="false"
         android:focusable="false"
         android:clickable="false"
         iconbutton:text_size="14sp"
