--- a/res/drawable/btn_alpha.xml
+++ b/res/drawable/btn_alpha.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_enabled="true" android:state_pressed="true" android:drawable="@drawable/main_button_background_down" />
 	<item android:state_enabled="true" android:state_selected="true" android:drawable="@drawable/main_button_background_down" />
+	<item android:state_enabled="true" android:state_selected="false" android:drawable="@drawable/main_button_background_up" />
 	<item android:state_enabled="true" android:state_focused="true" android:drawable="@drawable/main_button_background_up" />
 	<item android:state_enabled="true" android:drawable="@drawable/main_button_background_up" />
 </selector>
