--- a/res/layout/layout_layer.xml
+++ b/res/layout/layout_layer.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/toolbar_bg"
+    android:background="@drawable/layer_bg"
     android:orientation="vertical"
     android:paddingBottom="10dp"
     android:paddingLeft="20dp"
@@ -74,21 +74,54 @@
             android:text="油气专题" />
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <TextView
+            style="@style/layer_title"
+            android:layout_alignParentLeft="true"
+            android:text="@string/layer_name" />
+
+        <TextView
+            style="@style/layer_title"
+            android:layout_centerInParent="true"
+            android:text="@string/layer_show" />
+
+        <TextView
+            style="@style/layer_title"
+            android:layout_alignParentRight="true"
+            android:text="@string/layer_current" />
+    </RelativeLayout>
+
+    <FrameLayout
         android:id="@+id/id_llaout_layer_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp" >
+        android:layout_marginTop="5dp"
+        android:paddingBottom="20dp" >
 
         <ListView
             android:id="@+id/id_lstview_layer_1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:cacheColorHint="#00000000" />
-    </LinearLayout>
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:cacheColorHint="#00000000"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp" />
+
+        <TextView
+            android:id="@+id/layer_lstview_cover"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:background="@drawable/layer_cover_bg"
+            android:gravity="center"
+            android:textSize="30sp" />
+    </FrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
