--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -64,7 +64,7 @@
     </style>
     
      <style name="text_low_size">
-         <item name="android:textSize">15sp</item> 
+         <item name="android:textSize">20sp</item> 
          <item name="android:textColor">@color/black</item> 
     </style>
         <style name="btn_menuview_btn">
@@ -73,7 +73,7 @@
          <item name="android:gravity">center</item> 
          <item name="android:textColor">@color/black</item> 
          <item name="android:background">@drawable/selector_btn_toolbar</item> 
-         <item name="android:focusableInTouchMode">true</item> 
+         <item name="android:focusableInTouchMode">false</item> 
     </style>
     <!-- 子菜单 -->
     <style name="btn_child_menu">
@@ -116,6 +116,20 @@
          <item name="android:layout_height">50dp</item> 
          <item name="android:background">@drawable/selector_exit_btn</item> 
          <item name="android:textSize">25sp</item> 
+         <item name="android:textColor">@color/black</item> 
+    </style>
+    <style name="style_pop_button">
+         <item name="android:layout_width">wrap_content</item> 
+         <item name="android:layout_height">wrap_content</item> 
+         <item name="android:textSize">15sp</item> 
+         <item name="android:textColor">@color/white</item> 
+    </style>
+    <style name="layer_title">
+         <item name="android:layout_width">wrap_content</item> 
+         <item name="android:layout_height">wrap_content</item> 
+         <item name="android:background">@drawable/selector_btn_toolbar</item> 
+         <item name="android:textSize">15sp</item> 
+         <item name="android:gravity">center</item> 
          <item name="android:textColor">@color/black</item> 
     </style>
 </resources>
