--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         <com.esri.android.map.MapView
             android:id="@+id/map"
             android:layout_width="fill_parent"
-            mapoptions.ZoomLevel="130"
-            android:layout_height="fill_parent" >
+            android:layout_height="fill_parent"
+            mapoptions.ZoomLevel="130" >
         </com.esri.android.map.MapView>
 
         <RelativeLayout
@@ -37,27 +37,60 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/toolbottom_bg"
                     android:gravity="center_vertical"
-                    android:padding="8dp"
-                    android:orientation="horizontal" >
+                    android:orientation="vertical"
+                    android:padding="8dp" >
 
-                    <Button
-                        android:id="@+id/edittext_search"
+                    <!-- 搜索框+搜索结果listview -->
+
+                    <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/searchbtn"
-                        android:text="@string/search"
-                        android:gravity="left|center_vertical"
-                        android:textSize="16sp" />
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/toolbottom_bg"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal" >
 
-                    <com.sinopec.view.MenuButtonNoIcon
-                        android:id="@+id/btn_search_confirm"
-                        style="@style/btn_search_confirm"
-                        android:layout_marginLeft="2dp"
-                        android:background="@drawable/selector_btn_toolbar"
-                        android:gravity="center"
-                        android:text="@string/btn_confirm"
-                        android:textSize="15sp" 
-                        android:visibility="gone"/>
+                        <EditText
+                            android:id="@+id/edittext_search"
+                            android:layout_width="1200dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/searchbtn"
+                            android:gravity="left|center_vertical"
+                             android:textColor="@color/black"
+                            android:hint="塔里木"
+                            android:text="准葛尔"
+                            android:textSize="16sp" />
+
+                        <com.sinopec.view.MenuButtonNoIcon
+                            android:id="@+id/btn_search_confirm"
+                            style="@style/btn_search_confirm"
+                            android:layout_marginLeft="2dp"
+                            android:background="@drawable/selector_btn_toolbar"
+                            android:gravity="center"
+                            android:text="@string/btn_confirm"
+                            android:textSize="15sp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/search_listview_layout"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:background="@drawable/search_listview_bg"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:visibility="gone" >
+
+                        <ListView
+                            android:id="@+id/search_listview"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:cacheColorHint="#00000000"
+                            android:divider="@color/lightgray"
+                            android:dividerHeight="1dp" />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <RelativeLayout
@@ -157,37 +190,6 @@
                 android:text="@string/btn_cancel_chooise"
                 android:textSize="16sp" />
             <!-- 放大，缩小 -->
-
-
-            <!--
-            <RelativeLayout
-                android:id="@+id/map_scale_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tool_bar"
-                android:layout_marginTop="65dp" >
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:orientation="horizontal" >
-
-                    <ImageButton
-                        android:id="@+id/btn_scale_small"
-                        android:layout_width="66dp"
-                        android:layout_height="43dp"
-                        android:background="@drawable/btn_in" />
-
-                    <ImageButton
-                        android:id="@+id/btn_scale_big"
-                        android:layout_width="66dp"
-                        android:layout_height="43dp"
-                        android:background="@drawable/btn_zoom" />
-                </LinearLayout>
-            </RelativeLayout>
-            -->
-
 
             <!-- 底部按钮栏 -->
 
