提出搜索的task和adapter,搜索移到主界面（测试），获取对象point坐标有问题，跳转有问题

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                             android:gravity="left|center_vertical"
                              android:textColor="@color/black"
                             android:hint="塔里木"
-                            android:text="准葛尔"
+                            android:text="塔里木"
                             android:textSize="16sp" />
 
                         <com.sinopec.view.MenuButtonNoIcon
