--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
                         <ListView
                             android:id="@+id/search_listview"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="300dp"
                             android:cacheColorHint="#00000000"
                             android:divider="@color/lightgray"
                             android:dividerHeight="1dp" />
