--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -9,25 +9,24 @@
 
     <!-- 底部按钮栏子菜单栏 -->
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/menu_children_grid"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:background="@drawable/toolbottom_bg">
 
         <ImageButton
             android:id="@+id/btn_login_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:background="@drawable/selector_btn_back" />
 
         <LinearLayout
-            android:layout_width="1200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
@@ -39,6 +38,7 @@
                 android:textColor="@color/black"
                 android:singleLine="true"
                 android:hint="搜索"
+                android:text="塔里木"
                 android:textSize="16sp" />
 
             <com.sinopec.view.MenuButtonNoIcon
@@ -50,14 +50,14 @@
                 android:text="@string/btn_confirm"
                 android:textSize="15sp" />
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
     <!-- 搜索框和图层按钮 -->
 
     <LinearLayout
         android:id="@+id/search_listview_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginTop="15dp"
         android:gravity="center_horizontal"
         android:background="@drawable/search_listview_bg"
@@ -68,8 +68,8 @@
 
                <ListView
             android:id="@+id/search_listview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:cacheColorHint="#00000000"
             android:dividerHeight="1dp"
             android:divider="@color/lightgray"/>
