加入基础属性显示

--- a/res/layout/select_layout.xml
+++ b/res/layout/select_layout.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-
     <LinearLayout
         android:id="@+id/leftLayout"
         android:layout_width="fill_parent"
@@ -13,7 +12,6 @@
         android:background="#f7f5f5"
         android:orientation="vertical" >
 
-
         <TextView
             android:id="@+id/titleName"
             android:layout_width="wrap_content"
@@ -21,26 +19,26 @@
             android:textColor="@android:color/background_dark"
             android:textSize="35sp" />
 
-
         <ExpandableListView
             android:id="@+id/expanList"
             android:layout_width="wrap_content"
-            android:layout_height="800dip" />
+            android:layout_height="800dip"
+            android:cacheColorHint="#00000000"
+            android:divider="@color/lightgray"
+            android:dividerHeight="1dp" />
     </LinearLayout>
-  
+
     <ImageView
         android:layout_width="2dip"
         android:layout_height="match_parent"
-        android:src="@android:color/holo_orange_dark"
-        />
+        android:src="@android:color/holo_orange_dark" />
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:background="#f3f1f1"
-        android:cacheColorHint="#00000000"
-        android:layout_weight="1" />
-
+        android:cacheColorHint="#00000000" />
 
 </LinearLayout>
