--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:iconbutton="http://schemas.android.com/apk/res/com.sinopec.activity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:id="@+id/baselayout" >
 
     <RelativeLayout
-        android:id="@+id/baselayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
