--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -83,7 +83,7 @@
          <item name="android:textColor">@color/black</item> 
          <item name="android:background">@drawable/selector_btn_childmenu</item> 
     </style>
-     <style name="dialog_theme" parent="@android:style/Theme.Dialog">
+     <style name="scenic_util_dialog_theme" parent="@android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@drawable/png_transparent</item>
         <item name="android:backgroundDimEnabled">true</item>
@@ -131,5 +131,10 @@
          <item name="android:textSize">15sp</item> 
          <item name="android:gravity">center</item> 
          <item name="android:textColor">@color/black</item> 
+    </style>
+    
+    <style name="scenic_util_base_layout" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 </resources>
