--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="oilgas_url_theme">
-        <item>@string/url_oilreservoirs</item>
-        <item>@string/url_gasreservoirs</item>
-        <item>@string/url_well</item>
         <item>@string/url_oilfields</item>
         <item>@string/url_gasfields</item>
         <item>@string/url_basin</item>
@@ -14,51 +11,34 @@
         <item>@string/url_marine_image</item>
         <item>@string/url_marine_geo</item>
         <item>@string/url_basin</item>
-        <item>@string/url_oilreservoirs</item>
-        <item>@string/url_gasreservoirs</item>
         <item>@string/url_oilfields</item>
         <item>@string/url_gasfields</item>
-        <item>@string/url_well</item>
     </string-array> 
     
-    <string-array name="all_layer_urls_4image">
+    <!-- <string-array name="all_layer_urls_4image">
         <item>@string/url_marine_image</item>
         <item>@string/url_basin</item>
-        <item>@string/url_oilreservoirs</item>
-        <item>@string/url_gasreservoirs</item>
         <item>@string/url_oilfields</item>
         <item>@string/url_gasfields</item>
-        <item>@string/url_well</item>
-    </string-array> 
+    </string-array>  -->
+    
     <string-array name="all_layer_urls_4geo">
         <item>@string/url_marine_geo</item>
         <item>@string/url_basin</item>
-        <item>@string/url_oilreservoirs</item>
-        <item>@string/url_gasreservoirs</item>
         <item>@string/url_oilfields</item>
         <item>@string/url_gasfields</item>
-        <item>@string/url_well</item>
     </string-array> 
     <string-array name="all_layer_name">
-       <item>油藏 </item>
-       <item>气藏</item>
-       <item>井</item>
        <item>油田</item>
        <item>气田</item>
        <item>盆地</item>
     </string-array>
      <string-array name="all_layer_id">
-       <item>1</item>
-       <item>2</item>
-       <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
     </string-array>
      <string-array name="all_layer_color">
-       <item>#4DE41B</item>
-       <item>#ff0000 </item>
-       <item>#E65B00</item>
        <item>#FFFFFF</item>	
        <item>#B8D600</item>
        <item>#7C7CAD</item>
