框选查询改成使用queryTask查询,适合于只查询某个图层数据

--- a/res/anim/ani_menu_up.xml
+++ b/res/anim/ani_menu_up.xml
@@ -3,8 +3,8 @@
 	android:oneshot="true"
 	>
 	<translate
-		android:fromYDelta="0.0" 
-		android:toYDelta="1.0" 
-		android:duration="1000" 
+		android:fromYDelta="100%p" 
+		android:toYDelta="0" 
+		android:duration="500" 
 		/>
 </set>
