--- a/res/layout/layout_condition_query.xml
+++ b/res/layout/layout_condition_query.xml
@@ -47,6 +47,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" />
     </ScrollView>
-   
+           <Button
+            android:id="@+id/id_btn_condition_query_confirm"
+            style="@style/text_mid_size"
+            android:layout_width="100dip"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/confirm" />
 
 </LinearLayout>
