--- a/res/anim/ani_menu_down.xml
+++ b/res/anim/ani_menu_down.xml
@@ -3,8 +3,8 @@
 	android:oneshot="true"
 	>
 	<translate
-		android:fromYDelta="1.0" 
-		android:toYDelta="0.0" 
-		android:duration="500" 
+		android:fromYDelta="0" 
+		android:toYDelta="100%p" 
+		android:duration="1000" 
 		/>
 </set>
