--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
                 android:id="@+id/map"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                mapoptions.ZoomLevel="130" >
+                mapoptions.ZoomLevel="130"
+                mapoptions.center="0,0" >
             </com.esri.android.map.MapView>
 
             <RelativeLayout
