--- a/res/layout/layout_condition_query.xml
+++ b/res/layout/layout_condition_query.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/text_mid_size"
-            android:text="属性查询" />
+            android:text="定制查询" />
     </LinearLayout>
 
     <LinearLayout
