--- a/res/layout/layout_layer.xml
+++ b/res/layout/layout_layer.xml
@@ -7,6 +7,7 @@
     android:paddingBottom="10dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
+    android:alpha="0.8"
     android:paddingTop="10dp" >
 
     <TextView
